experimental/ir/testdata/symtab/double_def.proto.yaml.stderr.txt
warning: unused import "dep/priv.proto"
  --> dep/foo.proto:4:8
   |
 4 | import "dep/priv.proto";
   |        ^^^^^^^^^^^^^^^^
  help: delete it
   |
 4 | - import "dep/priv.proto";
   |
   = help: no symbols from this file are referenced

error: `Foo` declared multiple times
  --> dep/foo.proto:6:9
   |
 6 | message Foo {}
   |         ^^^ first here, as a message type
   |
  ::: main.proto:11:9
   |
11 | message Foo {
   |         --- ...also declared here

warning: unused import "dep/foo.proto"
  --> main.proto:4:8
   |
 4 | import "dep/foo.proto";
   |        ^^^^^^^^^^^^^^^
  help: delete it
   |
 4 | - import "dep/foo.proto";
   |
   = help: no symbols from this file are referenced

error: `Main` declared multiple times
  --> main.proto:6:9
   |
 6 | message Main {}
   |         ^^^^ first here, as a message type
 7 | message Main {
   |         ---- ...also declared here
...
17 | message Main {
   |         ---- ...and here

error: `x` declared multiple times
  --> main.proto:8:18
   |
 8 |   optional int32 x = 1;
   |                  ^ first here, as a message field
...
18 |   optional string x = 2;
   |                   - ...also declared here

error: `BAR` declared multiple times
  --> main.proto:12:8
   |
12 |   enum BAR {
   |        ^^^ first here, as an enum type
13 |     BAR = 0;
   |     --- ...also declared here, now as an enum value
   |
   = help: the fully-qualified names of enum values do not include the name of
           the enum; `BAR` defined inside of enum `Foo.BAR` has the name
           `Foo.BAR`, not `Foo.BAR.BAR`

error: `dep.foo.Foo` declared multiple times
  --> main2.proto:2:1
   |
 2 | package dep.foo.Foo;
   | ^^^^^^^^^^^^^^^^^^^^ first here, as a `package` declaration
   |
  ::: dep/foo.proto:6:9
   |
 6 | message Foo {}
   |         --- ...also declared here, now as a message type

warning: unused import "dep/foo.proto"
  --> main2.proto:4:8
   |
 4 | import "dep/foo.proto";
   |        ^^^^^^^^^^^^^^^
  help: delete it
   |
 4 | - import "dep/foo.proto";
   |
   = help: no symbols from this file are referenced

encountered 5 errors and 3 warnings
